# lf-info

./: README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  fly-review.yml
docker/: Dockerfile
lf_info/: __init__.py  routes.py
lf_info/data/: info.py  web_texts.py
lf_info/static/css/: logoanimation.css  ticker.css
lf_info/templates/: activities_reload.html  activity_list.html  index.html  ticker.html
lf_info/templates/snippets/: activity_list_full.html
tests/: conftest.py  test_activities.py  test_activity_list_webpage.py  test_web_texts.py
