[project]
name = "lf-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "foreninglet-data>=0.4.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "sentry-sdk>=2.22.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
]
